--- a/1-base/src/main/res/values/strings.xml
+++ b/1-base/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="btn_label_start">Start</string>
     <string name="btn_label_pause">Pause</string>
     <string name="btn_label_reset">Reset</string>
+    <string name="updatefrequencynotice">Updates every minute</string>
 </resources>
